@@ -24,6 +24,8 @@ Enhancements:
 
  * Issue #178: added anti flood script in demo directory.
 
+ * Issue #181: added CallEvery class to call a function every x seconds.
+
 Bugfixes:
 
  * Issue #156: data connection must be closed before sending 226/426 reply.
@@ -56,6 +58,7 @@ Bugfixes:
 Major API changes since 0.6.0:
 
  * AbstractedFS root and cwd properties can now be set via setattr().
+ * New CallLater class.
 
 
 Version: 0.6.0 - Date: 2011-01-24
